# ACTA-api

./: .env.example  .env.railway  .eslintrc.json  .gitignore  .prettierignore  Dockerfile  README.md  STELLAR_SETUP.md  package-lock.json  package.json
.github/workflows/: api.yml
api/: .gitignore
api/src/contracts/: credential.wasm
api/src/services/: stellarService.ts
src/: index.ts
src/app/api/: credentials.ts
src/config/: swagger.ts
src/contracts/: Cargo.toml  credential.rs
src/middleware/: cors.ts
src/routes/: credentials.ts
src/services/: stellarService.ts
src/types/: stellar.ts
src/utils/: stellar-validation.ts
v1/: package-lock.json
v1/contracts/: credential.wasm
v1/src/: index.ts
