[package]
name = "credential-contract"
version = "0.1.0"
edition = "2021"

[lib]
name = "credential_contract"
path = "credential.rs"
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

